# charuco_calibrator

./: README.md  package.xml  setup.py
charuco_calibrator/: charuco_hand_eye.py  charuco_intrinsic.py
config/: charuco_params.yaml
launch/: charuco_detector.launch.py  hand_eye_calibrator.launch.py
scripts/: capture_for_calibration.py  generate_calibration_pairs.py  save_robot_pose.py
